@@ -1,5 +1,11 @@
 2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build] Move `sys_siglist' check to configure.in.
+
+	* configure.in (sys_siglist): Add to `AC_CHECK_FUNCS_ONCE'.
+
+2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build] Move "siginfo_t .si_errno" check to configure.in.
 
 	* configure.in: Add check for "siginfo_t .si_errno".
